# balance-ball

./: CMakeLists.txt  README.md
balance-ball/: .cproject  .mxproject  .project  balance-ball Debug.launch  balance-ball.ioc
balance-ball/Core/Inc/: mpu6050.h
balance-ball/Core/Src/: gpio.c  main.c  mpu6050.c
include/: ball.h  gyro.h  platform.h  serial.h  shader.h
include/glad/: glad.h
shaders/: shader.frag  shader.vs
src/: ball.cpp  game.cpp  glad.c  gyro.cpp  platform.cpp  serial.cpp  shader.cpp
